--- a/views/mascotas.ejs
+++ b/views/mascotas.ejs
@@ -1,4 +1,6 @@
-<%- include('templates/cabecera', {tituloweb: 'Pagina de inicio'})%>
+<%- include('template/cabecera', {tituloweb: 'mascotas'})%>
+
+     
 
     <div class="container">
 
@@ -30,4 +32,4 @@
 
         
     </div>
-<%- include('templates/footer')%>
+<%- include('template/footer')%>
