--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,6 +1,6 @@
-<%- include('templates/cabecera',  {tituloweb: 'Pagina 404'}) %>
+<%- include('template/cabecera',  {tituloweb: 'Pagina 404'}) %>
 
     <h1> <%= titulo %></h1>
     <h1> <%= descripcion %></h1>
     
-    <%- include('templates/footer')%>
+    <%- include('template/footer')%>
