--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
- <%- include('template/cabecera', {tituloweb: 'Pagina de inicio'})%>
+ <%- include('templates/cabecera', {tituloweb: 'Pagina de inicio'})%>
 
     <h1> Titulo de mi sitio web index</h1>
     <h2> <%= titulo %> </h2> 
 
-<%- include('template/footer', {tituloweb: 'Pagina de inicio'})%>
+<%- include('templates/footer', {tituloweb: 'Pagina de inicio'})%>
