--- a/views/mascotas.ejs
+++ b/views/mascotas.ejs
@@ -1,4 +1,4 @@
-<%- include('template/cabecera', {tituloweb: 'mascotas'})%>
+<%- include('templates/cabecera', {tituloweb: 'Página de iniciorun'})%>
 
      
 
@@ -32,4 +32,4 @@
 
         
     </div>
-<%- include('template/footer')%>
+<%- include('templates/footer')%>
