--- a/views/servicios.ejs
+++ b/views/servicios.ejs
@@ -1,7 +1,7 @@
-<%- include('templates/cabecera',  {tituloweb: 'Pagina de serv'}) %>
+<%- include('templates/cabecera',  {tituloweb: 'Pagina de servicios'}) %>
 
     <h1>servicios</h1>
-    <h2> <%= servicio %></h2>
+    <h2> <%= tituloServicio %></h2>
 
     
 <%- include('templates/footer')%>
