--- a/views/mascotas.ejs
+++ b/views/mascotas.ejs
@@ -3,6 +3,14 @@
      
 
     <div class="container">
+      <h1> CRUD MongoDB</h1>
+      <a 
+        class="btn btn-success btn-block my-4"
+        href="/mascotas/crear"
+      
+      >
+        Crear nueva mascota
+      </a>
 
         <table class="table">
             <thead>
@@ -20,7 +28,14 @@
                             <th scope="row"><%= mascotas.id %> </th>
                             <td><%= mascotas.nombre %></td>
                             <td><%= mascotas.descripcion %></td>
-                            <td> accion</td>
+                            <td> 
+                              <a href="mascotas/<%= mascotas.id %> "
+                                 class="btn btn-warning btn-sm"   
+
+                              >
+                                Editar
+                              </a>
+                            </td>
                           </tr>
                     <% }) %>
                 
